Write-branch: Test cases for KMyMoneyWritableAccount, Part 1/3.
That was a tough one, had to chase a non-trivial bug for 2 days or so
(found and fixed it, but honestly cannot really explain it...)

In the course of searching that bug, did some code cleaning and symmetry
with sister project.